refactored and started adding curved geometry drawing

--- a/learnCUDA/learnCUDA.vcxproj
+++ b/learnCUDA/learnCUDA.vcxproj
@@ -21,6 +21,7 @@
     <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="curved_geometry.cuh" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
