--- a/learnCUDA/learnCUDA.vcxproj
+++ b/learnCUDA/learnCUDA.vcxproj
@@ -60,8 +60,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\OpenGL\includes;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\OpenGL\libs;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\OpenGL\includes;D:\OpenGL\includes;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\OpenGL\libs;D:\OpenGL\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
