--- a/learnCUDA/learnCUDA.vcxproj.filters
+++ b/learnCUDA/learnCUDA.vcxproj.filters
@@ -1,10 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CudaCompile Include="kernel.cu">
-      <Filter>Resource Files</Filter>
-    </CudaCompile>
-    <CudaCompile Include="opengl.cu">
+    <CudaCompile Include="main.cu">
       <Filter>Resource Files</Filter>
     </CudaCompile>
   </ItemGroup>
